--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,4 +32,5 @@
     <string name="client_name">имя клиента</string>
     <string name="client_phone_number">+7 987 654 32 10</string>
     <string name="client_balance">баланс</string>
+    <string name="delete_btn">удалить</string>
 </resources>
