--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,4 +33,5 @@
     <string name="client_phone_number">+7 987 654 32 10</string>
     <string name="client_balance">баланс</string>
     <string name="delete_btn">удалить</string>
+    <string name="edit_client_btn">edit client</string>
 </resources>
